Add neccessary gem and edit add function share to facebook + download image

--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -15,6 +15,10 @@ body {
 	margin-top: 40px!important;	
 }
 
+#download-button {
+	margin-top: 40px;
+}
+
 #card-container,
 #canvas-container {
 	width: 720px; 
