--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,9 +1,17 @@
-<div class="ui container" id="main_container">
+<div class="ui container p-none--sides" id="main_container">
 	<div class="ui center aligned middle aligned stackable grid full-height">
 		<div class="sixteen wide column">
 				<div id="card-container" class="tm-deep-shadow">
 					<%= image_tag @card.image_url, class:"ui image" %>
 				</div>
+				<button class="ui very basic icon right floated button" id="download-button"> 
+					<i class="download icon"></i>
+					Download
+				</button>
+				<button class="ui very basic icon right floated button" id="download-button"> 
+					<i class="facebook icon"></i>
+					Share on Facebook
+				</button>
 		</div>
 	</div>
 </div>
