Finish function uploading image to imgur

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="ui center aligned middle aligned stackable grid full-height">
 		<div class="sixteen wide column">
 				<div id="card-container" class="tm-deep-shadow">
-					<%= image_tag @card.image_url, class:"ui image" %>
+					<%= image_tag @card.imgur, class:"ui image" %>
 				</div>
 				<button class="ui very basic icon right floated button" id="download-button"> 
 					<i class="download icon"></i>
