--- a/app/views/layouts/_open_graph.html.erb
+++ b/app/views/layouts/_open_graph.html.erb
@@ -2,7 +2,7 @@
 <meta property="og:title" content="<%= "#{@card.sender} gửi lời chúc tới #{@card.receiver}"   %>" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://teachme.edu.vn/" />
-<meta property="og:image" content="<%= @card.image_url %>" />
+<meta property="og:image" content="<%= @card.imgur %>" />
 <meta property="og:description" content="<%= @card.message %>" />
 <meta property="og:site_name" content="TeachMe Greeting Lunar New Year" />
 
