--- a/app/assets/javascripts/sketch.js.erb
+++ b/app/assets/javascripts/sketch.js.erb
@@ -4,20 +4,21 @@ sender   = "";
 
 function setup() {
 	canvas 	 = createCanvas(720, 400);
-  bg_image = loadImage('<%= asset_path "greeting-card-1.jpg" %>');
+  bg_image = loadImage('<%= asset_path "card-1.gif" %>');
   canvas.id("card-canvas");
   canvas.parent('canvas-container');
 }
 
 function draw() {
- 	background(bg_image);
- 	fill(35,49,66);
+	background(bg_image)
+ 	fill(255);
  	textSize(16);
   textFont("Proxima_bold");
- 	text(receiver, 80, 70, 560, 50);
+ 	text(receiver, 160, 150, 400, 50);
+ 	textSize(14);
   textFont("Proxima_regular");
- 	text(message, 80, 125, 560, 160);
- 	fill(143,153,159);
+ 	text(message, 160, 180, 450, 160);
+ 	fill(248,215,138);
  	textFont("Proxima_regular");
- 	text(sender, 80, 320, 560, 50);
+ 	text(sender, 160, 320, 400, 50);
 }
