--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -23,8 +23,8 @@ body {
 #canvas-container {
 	width: 720px; 
 	height: 400px;
-	background: url('<%= asset_path 'greeting-card-1.jpg' %>');
-	background-size: contain;
+	// background: url('<%= asset_path 'card-1.svg' %>');
+	background-size: cover;
 	border-radius: 10px;
 	#card-canvas {
 		border-radius: 10px;
@@ -32,20 +32,22 @@ body {
 }
 
 #content-form {
-	margin-top: -360px;
+	margin-top: -280px;
 	text-align: left!important;
-	max-width: 560px;
-	margin-left:80px;
+	max-width: 400px;
+	margin-left:160px;
 	input,
 	textarea {
 		background: transparent!important;
 		border-style: dashed;
+		border-color: #FFF;
 		resize: none;
+		color: #FFF;
 	}
 	label {
 		font-family: 'Proxima_regular';
-		color: #919191!important;
-		margin-bottom: 1em;
+		color: #FFF!important;
+		margin-bottom: 0.5em;
 	}
 }
 
