--- a/app/assets/javascripts/sketch.js.erb
+++ b/app/assets/javascripts/sketch.js.erb
@@ -1,16 +1,57 @@
+jQuery(document).ready(function($){
+
+	$("#preview-button").click(function() {
+			sender   = "From: " + $("#sender-input").val();
+			receiver = "To: " + $("#receiver-input").val();
+			message  = $("#content-input").val()
+			toggleState(true);
+	    redraw(); 
+		});
+		$("#back-button").click(function() {
+			sender =receiver = message = "";
+			toggleState(false);
+	    redraw();
+		});
+		$("#send-button").click(function() {
+			data = document.getElementById("card-canvas").toDataURL();
+			$("#image-url-input").val(data);
+			$("#content-form").submit();
+		});
+		$("#card-selection .card").click(function() {
+			$("#card-selection .card").removeClass("active");
+			$(this).addClass("active");
+			template = $(this).data("template");
+			if (template == 1) {
+				bg_image = loadImage('<%= asset_path "card-1.gif" %>');
+			} else {
+				bg_image = loadImage('<%= asset_path "card-2.gif" %>');
+			}
+			redraw(background(bg_image));
+		});
+		function toggleState(state) {
+			if (state) {
+				$("#content-form, #preview-button").hide();
+				$("#back-button, #send-button").show();
+			} else {
+				$("#content-form, #preview-button").show();
+				$("#back-button, #send-button").hide();
+			}
+		}
+
+});
+
 message  = "";
 receiver = "";
 sender   = "";
-
 function setup() {
 	canvas 	 = createCanvas(720, 400);
-  bg_image = loadImage('<%= asset_path "card-2.gif" %>');
+  bg_image = loadImage('<%= asset_path "card-1.gif" %>');
   canvas.id("card-canvas");
   canvas.parent('canvas-container');
 }
 
 function draw() {
-	background(bg_image)
+	background(bg_image);
  	fill(255);
  	textSize(16);
   textFont("Proxima_bold");
