Fix error image at greeting page

--- a/app/views/homes/greeting.html.erb
+++ b/app/views/homes/greeting.html.erb
@@ -5,10 +5,10 @@
 				<div id="card-selection">
 					<div class="ui six cards">
 						<div class="card active" data-template="1">
-							<%= image_tag 'card-1' %>
+							<%= image_tag 'card-1.gif' %>
 						</div>
 						<div class="card" data-template="2">
-							<%= image_tag 'card-2' %>
+							<%= image_tag 'card-2.gif' %>
 						</div>
 					</div>
 				</div>
