Add body background

--- a/app/views/homes/greeting.html.erb
+++ b/app/views/homes/greeting.html.erb
@@ -35,20 +35,20 @@
 				  <input type="hidden" name="card[image_url]" id="image-url-input">
 				  <input type="hidden" name="card[template_id]" value="1">
 				<% end %>
-				<button class="ui basic tm-deep-shadow button tm-button"
+				<button class="ui red tm-deep-shadow button tm-button"
 								id="preview-button">
 					Xem trước
 				</button>
 				<div class="ui tm-deep-shadow buttons" id="action-buttons">
-					<button class="ui basic button tm-button"
+					<button class="ui orange button tm-button"
 									id="back-button"
 									style="display: none">
 						Chỉnh sửa
 					</button>
-					<button class="ui tm-blue button tm-button"
+					<button class="ui red button tm-button"
 									id="send-button"
 									style="display: none">
-						Gửi thông điệp
+						Tạo Thiệp
 					</button>
 				</div>
 		</div>
