--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -1,5 +1,7 @@
 body {
 	background: #fdfcfc;
+	background-image: url("<%= asset_path "background.svg" %>"); 
+	background-size: 400px 400px;
 }
 
 #main_container {
