--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -26,6 +26,9 @@ body {
 	width: 720px; 
 	height: 400px;
 	background-size: cover;
+	#card-canvas {
+		border-radius: 10px;
+	}
 }
 
 #card-selection {
