--- a/app/views/homes/greeting.html.erb
+++ b/app/views/homes/greeting.html.erb
@@ -1,39 +1,58 @@
-<div class="ui container" id="main_container">
+<div class="ui container p-none--sides" id="main_container">
 	<div class="ui center aligned middle aligned stackable grid full-height">
 		
 		<div class="sixteen wide column">
 				<div id="card-selection">
 					<div class="ui six cards">
-						<div class="card active" data-template="1">
-							<%= image_tag 'card-1.gif' %>
-						</div>
-						<div class="card" data-template="2">
-							<%= image_tag 'card-2.gif' %>
-						</div>
+						<% @desktop_templates.each_with_index do |template, index| %>
+							<div class="fluid card tm-deep-shadow <%= "active" if index == 0 %>" data-template="<%= index + 1 %>">
+								<%= image_tag "#{template}.gif" %>
+							</div>
+						<% end %>
 					</div>
 				</div>
 				<div id="canvas-container" class="tm-deep-shadow">
 				</div>
 				<%= form_tag cards_path, 
 										 class:"ui small form", 
-										 id:"content-form",
+										 id:"content-form-left",
 										 method:"post" do %>
 				  <div class="two fields">
 						<div class="field">
 					    <label>Người nhận:</label>
-					    <input type="text" name="card[receiver]" id="receiver-input">
+					    <input type="text" name="card[receiver]" class="content-receiver">
 					  </div>
 					  <div class="field">
 					    <label>Người gửi:</label>
-					    <input type="text" name="card[sender]" id="sender-input">
+					    <input type="text" name="card[sender]" class="content-sender">
 					  </div>
 					</div>
 				  <div class="field">
 				    <label>Lời chúc của bạn:</label>
-				    <textarea rows="6" name="card[message]" id="content-input"></textarea>
+				    <textarea rows="6" name="card[message]" class="content-message"></textarea>
 				  </div>
-				  <input type="hidden" name="card[image_url]" id="image-url-input">
-				  <input type="hidden" name="card[template_id]" value="1">
+				  <input type="hidden" name="card[image_url]" class="image-url-input">
+				  <input type="hidden" name="card[template_id]" class="template-id">
+				<% end %>
+				<%= form_tag cards_path, 
+										 class:"ui small form", 
+										 id:"content-form-right",
+										 style: "display:none",
+										 method:"post" do %>
+					<div class="ui fluid field">
+				    <label>Người nhận:</label>
+				    <input type="text" name="card[receiver]" class="content-receiver">
+				  </div>
+				  <div class="field">
+				    <label>Lời chúc của bạn:</label>
+				    <textarea rows="6" name="card[message]" class="content-message"></textarea>
+				  </div>
+				  <div class="field">
+				    <label>Người gửi:</label>
+				    <input type="text" name="card[sender]" class="content-sender">
+				  </div>
+				  <input type="hidden" name="card[image_url]" class="image-url-input">
+				  <input type="hidden" name="card[template_id]" class="template-id">
 				<% end %>
 				<button class="ui red tm-deep-shadow button tm-button"
 								id="preview-button">
