Fix nil data for image url

--- a/app/assets/javascripts/greeting.js.erb
+++ b/app/assets/javascripts/greeting.js.erb
@@ -26,10 +26,12 @@ jQuery(document).ready(function($){
 		});
 		$("#send-button").click(function() {
 			data = document.getElementById("card-canvas").toDataURL();
-			$("#image-url-input").val(data);
+			
 			if (template == 1 || template == 2) {
+				$("#content-form-left .image-url-input").val(data);
 				$("#content-form-left").submit();
 			} else {
+				$("#content-form-right .image-url-input").val(data);
 				$("#content-form-right").submit();
 			}
 		});
