Add send via Messenger button

--- a/app/assets/javascripts/greeting.js.erb
+++ b/app/assets/javascripts/greeting.js.erb
@@ -36,6 +36,22 @@ jQuery(document).ready(function($){
 			}
 		});
 
+
+		$("#fb-send-button").click(function() {
+			params = {
+				method: "send",
+				link: window.location.href
+			}
+			FB.ui(params, function(response) {
+			    if (response && !response.error_message) {
+			      alert('Posting completed.');
+			    } else {
+			      alert('Error while posting.');
+			    }
+			  }
+			);
+		});
+
 		// Fetch images path and save to array
 
 		templates_path = []
