Add function download image

--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -14,11 +14,13 @@
 					<i class="facebook icon"></i>
 					Chia sẻ qua Facebook
 				</button>
-				<button class="ui icon button" 
-								id="download-button"> 
+				<a  href="<%= @card.imgur %>"
+						class="ui icon button" 
+						id="download-button"
+						download> 
 					<i class="download icon"></i>
 					Download
-				</button>
+				</a>
 		</div>
 	</div>
 </div>
