Improved and updated new branch

--- a/app/views/layouts/_open_graph.html.erb
+++ b/app/views/layouts/_open_graph.html.erb
@@ -4,5 +4,5 @@
 <meta property="og:url" content="http://teachme.edu.vn/cards/<%= @card.slug %>" />
 <meta property="og:image" content="<%= @card.imgur %>" />
 <meta property="og:description" content="<%= @card.message %>" />
-<meta property="og:site_name" content="TeachMe Greeting Lunar New Year" />
+<meta property="og:site_name" content="Teezi Happy Vietnamese Women's day" />
 
