--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -1,6 +1,6 @@
 body {
 	background: #fdfcfc;
-	background-image: url("<%= asset_path "background.svg" %>"); 
+	// background-image: url("<%= asset_path "background.svg" %>");
 	background-size: 400px 400px;
 }
 
@@ -14,7 +14,7 @@ body {
 }
 
 #action-buttons {
-	margin-top: 40px!important;	
+	margin-top: 40px!important;
 }
 
 #download-button {
@@ -23,11 +23,17 @@ body {
 
 #card-container,
 #canvas-container {
-	width: 720px; 
+	width: 720px;
 	height: 400px;
 	background-size: cover;
+	background-color: #fff;
+	position: relative;
 	#card-canvas {
 		border-radius: 10px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
 	}
 }
 
@@ -46,10 +52,13 @@ body {
 }
 
 #content-form-left {
-	margin-top: -280px;
 	text-align: left!important;
 	max-width: 400px;
-	margin-left:160px;
+	position: relative;
+	z-index: 2;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
 }
 
 #content-form-right {
@@ -57,7 +66,7 @@ body {
 		margin-top: -350px;
 		text-align: left!important;
 		width: 275px;
-		margin-left:360px;	
+		margin-left:360px;
 }
 
 #content-form-left,
@@ -66,13 +75,18 @@ body {
 	textarea {
 		background: transparent!important;
 		border-style: dashed;
-		border-color: #FFF;
+		border-color: #2c3e50;
 		resize: none;
-		color: #FFF;
+		color: #2c3e50;
+	}
+	input {
+		border: 1px solid #95a5a6;
+		border-width: 0 0 1px 0;
+		border-radius: 0;
 	}
 	label {
 		font-family: 'Proxima_regular';
-		color: #FFF!important;
+		color: #2c3e50!important;
 		margin-bottom: 0.5em;
 	}
 }
@@ -85,8 +99,8 @@ body {
 	textarea {
 		border-color: #000;
 		resize: none;
-		color: #000;	
-	}	
+		color: #000;
+	}
 }
 
 .tm-button {
